<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="58dp"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                app:cardBackgroundColor="#EAE8E8"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginBottom="10dp"
                    android:gravity="center">

                    <LinearLayout
                        android:id="@+id/llUserInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:orientation="horizontal"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:weightSum="10"
                        android:layout_gravity="center_horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="10"
                            android:gravity="center_vertical"
                            android:padding="5dp"
                            android:text="@string/user_info"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="17sp"
                            tools:ignore="RtlCompat" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_gravity="center_horizontal"
                           >
                            <com.mikhaellopez.circularimageview.CircularImageView
                                android:id="@+id/imageContact"
                                android:layout_width="55dp"
                                android:layout_height="55dp"
                                app:civ_border_width="0dp"
                                app:civ_shadow_radius="9"
                                app:civ_shadow_color="#3f51b5"
                                android:layout_marginTop="12dp"
                                android:layout_marginBottom="12dp"
                                app:srcCompat="@mipmap/profile"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:gravity="center">

<!--                                <TextView-->
<!--                                    android:id="@+id/tvNameTitle"-->
<!--                                    android:layout_width="wrap_content"-->
<!--                                    android:layout_height="wrap_content"-->
<!--                                    android:text="@string/name_title"-->
<!--                                    android:textColor="@color/solid_black" />-->

                                <TextView
                                    android:id="@+id/tvName"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="NOT FOUND"
                                    android:textAlignment="center"
                                    android:textColor="@color/solid_black"
                                    />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:orientation="horizontal"
                                android:gravity="center">

<!--                                <TextView-->
<!--                                    android:id="@+id/tvMobileTitle"-->
<!--                                    android:layout_width="wrap_content"-->
<!--                                    android:layout_height="wrap_content"-->
<!--                                    android:text="@string/mobile_title"-->
<!--                                    android:textColor="@color/solid_black" />-->

                                <TextView
                                    android:id="@+id/tvMobile"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="2dp"
                                    android:text=" NOT FOUND"
                                    android:textColor="@color/solid_black"
                                    android:textAlignment="center"/>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:orientation="horizontal"
                                android:gravity="center">

<!--                                <TextView-->
<!--                                    android:id="@+id/tvAddressTitle"-->
<!--                                    android:layout_width="wrap_content"-->
<!--                                    android:layout_height="wrap_content"-->
<!--                                    android:text="@string/address_text"-->
<!--                                    android:textColor="@color/solid_black" />-->

                                <TextView
                                    android:id="@+id/tvAddress"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginLeft="2dp"
                                    android:text="NOT FOUND"
                                    android:textAlignment="center"
                                    android:textColor="@color/solid_black" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="#EAE8E8"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="5dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/llTop"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:orientation="horizontal"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:weightSum="10">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="10"
                            android:gravity="center_horizontal"
                            android:padding="5dp"
                            android:text="@string/device_info"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="17sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tvImeiOneTitle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/imei_1"
                                android:textColor="@color/solid_black"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/tvImeiOne"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:text=""
                                android:textColor="@color/solid_black"
                                android:textSize="16sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tvImeiTwoTitle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/imei_2"
                                android:textColor="@color/solid_black"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/tvImeiTwo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:text=""
                                android:textColor="@color/solid_black"
                                android:textSize="16sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tvManufacturerTitle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/device"
                                android:textColor="@color/solid_black"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/tvManufacturer"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:text=""
                                android:textColor="@color/solid_black"
                                android:textSize="16sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tvBuildTitle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/build_number"
                                android:textColor="@color/solid_black"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/tvBuild"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:text=""
                                android:textColor="@color/solid_black"
                                android:textSize="16sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tvDeviceIdTitle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/device_id"
                                android:textColor="@color/solid_black"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/tvDeviceId"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:text=""
                                android:textColor="@color/solid_black"
                                android:textSize="16sp" />
                        </LinearLayout>

                        <!--<ProgressBar-->
                        <!--android:id="@+id/simpleProgressBar"-->
                        <!--style="@style/Widget.AppCompat.ProgressBar.Horizontal"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="10dp"-->
                        <!--android:layout_marginTop="10dp"-->
                        <!--android:background="#EAE8E8"-->
                        <!--android:indeterminate="true"-->
                        <!--android:max="100"-->
                        <!--android:padding="20dp"-->
                        <!--android:progress="50" />-->

                    </LinearLayout>


                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>